<resources>
    <string name="app_name">FinalProject_HendrixJoshua</string>
    <string name="view">View Report List Page</string>
    <string name="clear">Clear Fields</string>
    <string name="delete">Delete Entry</string>
    <string name="update">Update Entry</string>
    <string name="submit">Submit Report</string>
    <string name="desc">Enter A Description of the Problem</string>
    <string name="email">Enter Your Email</string>
    <string name="name">Enter Your Name</string>
    <string name="menu_about">"About "</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="switchtitle">Switch for star!</string>
    <string name="title_activity_preferences">Settings</string>
</resources>
